tests/NormalTests/paczka1/fuzzy1/55421235.err
Error in line 14: H8wP19TDvKB A654 52,7
Error in line 30: D0LBfU6 S173 58,8
Error in line 28: 4hZeqQwJ1x A654 78,2
Error in line 34: 4hZeqQwJ1x A929 20,4
